Save VM password in Helen and retrieve with dedicated API
